` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/CancelWorkflowStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title CancelWorkflow State Transitions

[*] --> CREATED
CANCEL_WORKFLOW_COMMAND_CREATED --> CANCEL_WORKFLOW_COMMAND_CREATED: CANCEL_WORKFLOW_EXECUTION
CANCEL_WORKFLOW_COMMAND_CREATED --> CANCEL_WORKFLOW_COMMAND_RECORDED: WORKFLOW_EXECUTION_CANCELED
CREATED --> CANCEL_WORKFLOW_COMMAND_CREATED: SCHEDULE
CANCEL_WORKFLOW_COMMAND_RECORDED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
